After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727009 - redefinition of GtkPrinterCloudprint: cloudprint fails to build
redefinition of GtkPrinterCloudprint: cloudprint fails to build
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Printing
3.12.x
Other OpenBSD
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-25 09:53 UTC by Antoine Jacoutot
Modified: 2014-03-25 12:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
do not redefine GtkPrinterCloudprint (1.13 KB, patch)
2014-03-25 11:25 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2014-03-25 09:53:26 UTC
Hi.

Building gtk+ 3.12.0 on OpenBSD yelds to this error:

In file included from gtkprintbackendcloudprint.c:41:
gtkprintercloudprint.h:33: error: redefinition of typedef 'GtkPrinterCloudprint'
gtkcloudprintaccount.h:32: error: previous declaration of 'GtkPrinterCloudprint' was here
Error while executing cc -DHAVE_CONFIG_H -I. -I../../.. -I../../.. -I../../../gtk -I../../../gtk -I../../../gdk -I../../../gdk -DGTK_PRINT_BACKEND_ENABLE_UNSUPPORTED -I/usr/local/include -I/usr/X11R6/include/freetype2 -I/usr/X11R6/include -I/usr/local/include/pango-1.0 -I/usr/X11R6/include -I/usr/local/include/cairo -I/usr/X11R6/include/pixman-1 -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/include/atk-1.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/harfbuzz -I/usr/X11R6/include/freetype2 -I/usr/local/include/gio-unix-2.0/ -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -DG_ENABLE_DEBUG -DG_DISABLE_CAST_CHECKS -I/usr/local/include/rest-0.7 -I/usr/local/include/libsoup-2.4 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/libxml2 -I/usr/local/include/json-glib-1.0 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -O2 -pipe -Wall -MT libprintbackend_cloudprint_la-gtkprintbackendcloudprint.lo -MD -MP -MF .deps/libprintbackend_cloudprint_la-gtkprintbackendcloudprint.Tpo -c gtkprintbackendcloudprint.c -fPIC -DPIC -o .libs/libprintbackend_cloudprint_la-gtkprintbackendcloudprint.o
Makefile:645: recipe for target 'libprintbackend_cloudprint_la-gtkprintbackendcloudprint.lo' failed
Comment 1 Antoine Jacoutot 2014-03-25 11:25:45 UTC
Created attachment 272840 [details] [review]
do not redefine GtkPrinterCloudprint
Comment 2 Emmanuele Bassi (:ebassi) 2014-03-25 11:46:08 UTC
Review of attachment 272840 [details] [review]:

3.12 is out the door, but I guess it'd be good to land this as soon as possible in order to get GNOME 3.12 on *BSD.
Comment 3 Antoine Jacoutot 2014-03-25 12:48:14 UTC
(In reply to comment #2)
> Review of attachment 272840 [details] [review]:
> 
> 3.12 is out the door, but I guess it'd be good to land this as soon as possible
> in order to get GNOME 3.12 on *BSD.

Thank you Emmanuele. It's pushed as 332688a
I will leave it up to you to cherry pick it for gnome-3-12.