prevent redefinition of typedef GtkPrinterCloudprint

https://bugzilla.gnome.org/show_bug.cgi?id=727009